--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ params { includeConfig 'conf/global_params.config' }
 profiles {
     standard { includeConfig 'conf/standard.config' }
     stub { includeConfig 'conf/stub.config' }
+    dev { includeConfig 'conf/dev.config' }
     docker { includeConfig 'conf/docker.config' }
     conda { includeConfig 'conf/conda.config' }
     gls { includeConfig 'conf/gcp.config' }
