adding the new parameter to the global configuration

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -9,6 +9,8 @@ local_location = "/work/data/multiple_samples" // single_sample OR multiple_samp
 
 analysis_mode = "parallel" // OR "batch"
 
+use_trimmomatic = "false"
+
 library_name = "illumina"
 
 outdir = "/work/results"
