adding container/conda instructions for trimmomatic

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -1,6 +1,10 @@
 process {
     withName:
-    ".*" {
+    "TRIMMOMATIC" {
+        conda = 'bioconda::trimmomatic:0.35'
+    }
+
+    "TB*" {
         conda = 'bioconda::mtbseq:1.0.3'
     }
 }
