--- a/conf/docker.config
+++ b/conf/docker.config
@@ -2,7 +2,11 @@ docker.enabled = true
 
 process {
     withName:
-    ".*" {
+    "TRIMMOMATIC" {
+        container = 'quay.io/biocontainers/trimmomatic:0.35--6'
+    }
+
+    "TB*" {
         container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
     }
 }
