--- a/conf/standard.config
+++ b/conf/standard.config
@@ -9,6 +9,14 @@ process {
     maxRetries = 2
 
     withName:
+    "TRIMMOMATIC" {
+        cpus = 4
+        memory = "8 GB"
+    }
+    "TBREFINE" {
+        cpus = 8
+        memory = "15 GB"
+    }
     "TBREFINE" {
         cpus = 8
         memory = "15 GB"
