--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -68,23 +68,23 @@ global_threads = 4
 
 // This OPTION sets the reference genome for the read mapping.
 // The update default path is for the bioconda::mtbseq docker container.
-global_mtb_ref = "${baseDir}/references/ref/"
+global_mtb_ref = "${baseDir}/data/references/ref/"
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
 // The update default path is for the bioconda::mtbseq docker container.
-global_resilist = "${baseDir}/references/res/MTB_Resistance_Mediating.txt"
+global_resilist = "${baseDir}/data/references/res/MTB_Resistance_Mediating.txt"
 
 // This OPTION sets a list of interesting regions to be used for annotation of detected variants
 // The update default path is for the bioconda::mtbseq docker container.
-global_intregions = "${baseDir}/references/res/MTB_Extended_Resistance_Mediating.txt"
+global_intregions = "${baseDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
 
 // This OPTION specifies a gene categories file to annotate essential and non-essential genes as well as repetitive regions. SNPs in repetitive regions will be excluded for phylogenetic analysis.
 // The update default path is for the bioconda::mtbseq docker container.
-global_categories = "${baseDir}/references/cat/MTB_Gene_Categories.txt"
+global_categories = "${baseDir}/data/references/cat/MTB_Gene_Categories.txt"
 
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 // The update default path is for the bioconda::mtbseq docker container.
-global_basecalib = "${baseDir}/references/res/MTB_Base_Calibration_List.vcf"
+global_basecalib = "${baseDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
 
 
