updating trimmomatic version to 0.39.x

--- a/conf/docker.config
+++ b/conf/docker.config
@@ -3,7 +3,7 @@ docker.enabled = true
 process {
     withName:
     "TRIMMOMATIC" {
-        container = 'quay.io/biocontainers/trimmomatic:0.35--6'
+        container = 'quay.io/biocontainers/trimmomatic:0.39'
     }
 
     "TB*" {
