adding build hash `hdfd78af_2`for trimmomatic

--- a/conf/conda.config
+++ b/conf/conda.config
@@ -1,7 +1,7 @@
 process {
     withName:
     "TRIMMOMATIC" {
-        conda = 'bioconda::trimmomatic:0.39'
+        conda = 'bioconda::trimmomatic:0.39:hdfd78af_2'
     }
 
     "TB*" {
