adding `mtb_ref_name` that's important for the parameter usage

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -68,7 +68,9 @@ global_threads = 4
 
 // This OPTION sets the reference genome for the read mapping.
 // The update default path is for the bioconda::mtbseq docker container.
-global_mtb_ref = "${baseDir}/data/references/ref/"
+global_mtb_ref_name = "M._tuberculosis_H37Rv_2015-11-13"
+global_mtb_ref_path = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
+
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
 // The update default path is for the bioconda::mtbseq docker container.
