reverting changes at `global_params.config`

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -68,25 +68,25 @@ global_threads = 4
 
 // This OPTION sets the reference genome for the read mapping.
 // The update default path is for the bioconda::mtbseq docker container.
-global_ref_reference_genome_name = "M._tuberculosis_H37Rv_2015-11-13"
-global_ref_reference_genome_path = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
+global_mtb_ref_name = "M._tuberculosis_H37Rv_2015-11-13"
+global_mtb_ref_path = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
 
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
 // The update default path is for the bioconda::mtbseq docker container.
-global_ref_resistance_list  = "${baseDir}/data/references/res/MTB_Resistance_Mediating.txt"
+global_resilist = "${baseDir}/data/references/res/MTB_Resistance_Mediating.txt"
 
 // This OPTION sets a list of interesting regions to be used for annotation of detected variants
 // The update default path is for the bioconda::mtbseq docker container.
-global_ref_interesting_regions = "${baseDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
+global_intregions = "${baseDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
 
-// This OPTION specifies a gene ref_gene_categories file to annotate essential and non-essential genes as well as repetitive regions. SNPs in repetitive regions will be excluded for phylogenetic analysis.
+// This OPTION specifies a gene categories file to annotate essential and non-essential genes as well as repetitive regions. SNPs in repetitive regions will be excluded for phylogenetic analysis.
 // The update default path is for the bioconda::mtbseq docker container.
-global_ref_gene_categories = "${baseDir}/data/references/cat/MTB_Gene_Ref_Gene_Categories.txt"
+global_categories = "${baseDir}/data/references/cat/MTB_Gene_Categories.txt"
 
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 // The update default path is for the bioconda::mtbseq docker container.
-global_ref_base_quality_recalibration = "${baseDir}/data/references/res/MTB_Base_Calibration_List.vcf"
+global_basecalib = "${baseDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
 
 
@@ -100,11 +100,11 @@ TBBWA {
 
     cpus = params.global_threads
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 }
 
@@ -115,11 +115,11 @@ TBREFINE {
 
     cpus = params.global_threads
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -131,11 +131,11 @@ TBPILE {
 
     cpus = params.global_threads
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 
@@ -150,11 +150,11 @@ TBLIST {
 
     minbqual = params.global_minbqual
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -172,11 +172,11 @@ TBVARIANTS {
     minphred = params.global_minphred
     minfreq = params.global_minfreq
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -196,11 +196,11 @@ TBSTATS {
     minphred = params.global_minphred
     minfreq = params.global_minfreq
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -219,11 +219,11 @@ TBJOIN {
     minphred = params.global_minphred
     minfreq = params.global_minfreq
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 
@@ -244,11 +244,11 @@ TBSTRAINS {
     minphred = params.global_minphred
     minfreq = params.global_minfreq
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -268,11 +268,11 @@ TBAMEND {
     minphred = params.global_minphred
     mincovr = params.global_mincovr
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -285,11 +285,11 @@ TBGROUPS {
 
     distance = params.global_distance
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
@@ -309,11 +309,11 @@ TBFULL {
     distance = params.global_distance
 
 
-    ref_reference_genome_name = params.global_ref_reference_genome_name
-    ref_resistance_list = params.global_ref_resistance_list
-    ref_interesting_regions = params.global_ref_interesting_regions
-    ref_gene_categories = params.global_ref_gene_categories
-    ref_base_quality_recalibration = params.global_ref_base_quality_recalibration
+    ref = params.global_mtb_ref
+    resilist = params.global_resilist
+    intregions = params.global_intregions
+    categories = params.global_categories
+    basecalib = params.global_basecalib
 
 
 }
