--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -70,7 +70,8 @@ global_threads = 4
 // The update default path is for the bioconda::mtbseq docker container.
 global_mtb_ref_name = "M._tuberculosis_H37Rv_2015-11-13"
 global_mtb_ref_path = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
-
+global_ref_reference_genome_path = "M._tuberculosis_H37Rv_2015-11-13"
+global_ref_reference_genome_name = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
 // The update default path is for the bioconda::mtbseq docker container.
