--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -18,7 +18,7 @@ user = "root"
 project_name = "prj"
 
 
-samplesheet_name = "${params.project_name}_samples.tsv"
+cohort_tsv = "${params.project_name}_cohort.tsv"
 
 
 //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
@@ -69,25 +69,23 @@ global_threads = 4
 // This OPTION sets the reference genome for the read mapping.
 // The update default path is for the bioconda::mtbseq docker container.
 global_mtb_ref_name = "M._tuberculosis_H37Rv_2015-11-13"
-global_mtb_ref_path = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
-global_ref_reference_genome_path = "M._tuberculosis_H37Rv_2015-11-13"
-global_ref_reference_genome_name = "${baseDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
+global_mtb_ref_path = "${projectDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
 // The update default path is for the bioconda::mtbseq docker container.
-global_resilist = "${baseDir}/data/references/res/MTB_Resistance_Mediating.txt"
+global_resilist = "${projectDir}/data/references/res/MTB_Resistance_Mediating.txt"
 
 // This OPTION sets a list of interesting regions to be used for annotation of detected variants
 // The update default path is for the bioconda::mtbseq docker container.
-global_intregions = "${baseDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
+global_intregions = "${projectDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
 
 // This OPTION specifies a gene categories file to annotate essential and non-essential genes as well as repetitive regions. SNPs in repetitive regions will be excluded for phylogenetic analysis.
 // The update default path is for the bioconda::mtbseq docker container.
-global_categories = "${baseDir}/data/references/cat/MTB_Gene_Categories.txt"
+global_categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
 
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 // The update default path is for the bioconda::mtbseq docker container.
-global_basecalib = "${baseDir}/data/references/res/MTB_Base_Calibration_List.vcf"
+global_basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
 
 
@@ -257,10 +255,9 @@ TBSTRAINS {
 
 
 TBAMEND {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbamend"
     save_mode = 'copy'
     should_publish = true
-    project_name = params.project_name
 
 
     window = params.global_window
