Refactor the param names

--- a/conf/dev.config
+++ b/conf/dev.config
@@ -8,6 +8,14 @@ profiles {
     process {
             errorStrategy = { task.attempt < 3 ? 'retry' : 'ignore' }
             executor = 'k8s'
+
+    withName:
+    ".*" {
+        container = 'ubuntu:20.04'
+        cpus = 1
+        memory = "2 GB"
+    }
+
         }
 
     k8s {
