--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -5,6 +5,8 @@ genomeIds = ["ERR841438", "ERR841440"]
 
 run_type = "local" // OR "sra"
 
+input_samplesheet = "${projectDir}/samplesheet.csv"
+
 local_location = "/work/data/multiple_samples" // single_sample OR multiple_samples
 
 analysis_mode = "parallel" // OR "batch"
@@ -15,77 +17,78 @@ outdir = "/work/results"
 
 user = "root"
 
-project_name = "prj"
+project = "prj"
 
 
-cohort_tsv = "${params.project_name}_cohort.tsv"
+cohort_tsv = "${params.project}_cohort.tsv"
 
 
 //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
 // The all_vars only needs to be activated in MTBseq. But in mtbseq-nf we'll specify it as false
-global_all_vars = false
+all_vars = false
 
 // Setting this OPTION will add an additional filter that excludes all variants except SNPs.
-global_snp_vars = false
+snp_vars = false
 
 // Setting this OPTION has major implications on how the mapping data for each position is processed. By default, the majority allele is called and taken for further calculations.
 // If the --lowfreq_vars OPTION is set, MTBseq will consider the majority allele distinct from wild type, if such an allele is present.
 // This means that only in this detection mode, MTBseq will report variants present only in subpopulations, i.e. low frequency mutations.
 // Of course, OPTIONS --mincovf, --mincovr, --minphred and --minfreq need to be set accordingly.
 // Please be aware that output generated in this detection mode should not be used for phylogenetic analysis.
-global_lowfreq_vars = false
+lowfreq_vars = false
 
 // The OPTION sets a threshold for the sequence data quality to be used for the mpileup creation
-global_minbqual = 13
+minbqual = 13
 
 // The OPTION sets a minimum forward read coverage threshold. Alleles must have a forward coverage of this VALUE or higher to be considered.
-global_mincovf = 4
+mincovf = 4
 
 // The OPTION sets a minimum reverse read coverage threshold. Alleles must have a reverse coverage of this VALUE or higher to be considered.
-global_mincovr = 4
+mincovr = 4
 
 // The OPTION sets a minimum number of reads indicating an allele with a phred score of at least 20.
-global_minphred = 4
+minphred = 4
 
 // The OPTION sets a minimum frequency for an allele.
-global_minfreq = 75
+minfreq = 75
 
 // The option sets a minimum percentage of samples with unambiguous information for position.
-global_unambig = 95
+unambig = 95
 
 // The OPTION sets a window size in which the algorithm scans for the occurrence of multiple variants within the same sample.
 // If more than one variant occurs within this window in the same sample, the positions will be excluded.
-global_window = 12
+window = 12
 
 // The OPTION sets a SNP distance that is used to classify samples into groups of samples, using agglomerative clustering.
 // If SNP distances between samples are less or equal this VALUE, they are grouped together.
-global_distance = 12
+distance = 12
 
 // The OPTION sets the maximum number of CPUs to use within the pipeline.
 // You can use more than one core in order to execute the pipeline faster. 8 is the current maximum.
-global_threads = 4
+threads = 4
+cpus = 4
 
+ref_and_indexes_path = "${projectDir}/data/references/ref/"
 
 // This OPTION sets the reference genome for the read mapping.
 // The update default path is for the bioconda::mtbseq docker container.
-global_mtb_ref_name = "M._tuberculosis_H37Rv_2015-11-13"
-global_mtb_ref_path = "${projectDir}/data/references/ref/M._tuberculosis_H37Rv_2015-11-13*"
+ref = "${params.ref_and_indexes_path}/M._tuberculosis_H37Rv_2015-11-13.fasta"
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
 // The update default path is for the bioconda::mtbseq docker container.
-global_resilist = "${projectDir}/data/references/res/MTB_Resistance_Mediating.txt"
+resilist = "${projectDir}/data/references/res/MTB_Resistance_Mediating.txt"
 
 // This OPTION sets a list of interesting regions to be used for annotation of detected variants
 // The update default path is for the bioconda::mtbseq docker container.
-global_intregions = "${projectDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
+intregions = "${projectDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
 
 // This OPTION specifies a gene categories file to annotate essential and non-essential genes as well as repetitive regions. SNPs in repetitive regions will be excluded for phylogenetic analysis.
 // The update default path is for the bioconda::mtbseq docker container.
-global_categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
+categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
 
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
 // The update default path is for the bioconda::mtbseq docker container.
-global_basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
+basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
 
 
@@ -93,161 +96,161 @@ global_basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.
 
 // Module level parameters
 TBBWA {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbbwa"
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.global_threads
+    cpus = params.threads
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 }
 
 TBREFINE {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbrefine"
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.global_threads
+    cpus = params.threads
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 TBPILE {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbpile"
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.global_threads
+    cpus = params.threads
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 
 }
 
 TBLIST {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tblist"
     save_mode = 'copy'
     should_publish = true
 
-    cpus = params.global_threads
+    cpus = params.threads
 
-    minbqual = params.global_minbqual
+    minbqual = params.minbqual
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 TBVARIANTS {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbvariants"
     save_mode = 'copy'
     should_publish = true
 
-    all_vars = params.global_all_vars
-    snp_vars = params.global_snp_vars
-    lowfreq_vars = params.global_lowfreq_vars
-    mincovf = params.global_mincovf
-    mincovr = params.global_mincovr
-    minphred = params.global_minphred
-    minfreq = params.global_minfreq
+    all_vars = params.all_vars
+    snp_vars = params.snp_vars
+    lowfreq_vars = params.lowfreq_vars
+    mincovf = params.mincovf
+    mincovr = params.mincovr
+    minphred = params.minphred
+    minfreq = params.minfreq
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 TBSTATS {
-    project_name = params.project_name
+    project = "${params.outdir}/tbstats"
     results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
 
 
-    all_vars = params.global_all_vars
-    snp_vars = params.global_snp_vars
-    lowfreq_vars = params.global_lowfreq_vars
-    mincovf = params.global_mincovf
-    mincovr = params.global_mincovr
-    minphred = params.global_minphred
-    minfreq = params.global_minfreq
+    all_vars = params.all_vars
+    snp_vars = params.snp_vars
+    lowfreq_vars = params.lowfreq_vars
+    mincovf = params.mincovf
+    mincovr = params.mincovr
+    minphred = params.minphred
+    minfreq = params.minfreq
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 TBJOIN {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbjoin"
     save_mode = 'copy'
     should_publish = true
-    project_name = params.project_name
+    project = params.project
 
-    all_vars = params.global_all_vars
-    snp_vars = params.global_snp_vars
-    lowfreq_vars = params.global_lowfreq_vars
-    mincovf = params.global_mincovf
-    mincovr = params.global_mincovr
-    minphred = params.global_minphred
-    minfreq = params.global_minfreq
+    all_vars = params.all_vars
+    snp_vars = params.snp_vars
+    lowfreq_vars = params.lowfreq_vars
+    mincovf = params.mincovf
+    mincovr = params.mincovr
+    minphred = params.minphred
+    minfreq = params.minfreq
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 
 }
 
 TBSTRAINS {
-    project_name = params.project_name
+    results_dir = "${params.outdir}/tbstrains"
     results_dir = params.outdir
     save_mode = 'copy'
     should_publish = true
 
 
-    all_vars = params.global_all_vars
-    snp_vars = params.global_snp_vars
-    lowfreq_vars = params.global_lowfreq_vars
-    mincovf = params.global_mincovf
-    mincovr = params.global_mincovr
-    minphred = params.global_minphred
-    minfreq = params.global_minfreq
+    all_vars = params.all_vars
+    snp_vars = params.snp_vars
+    lowfreq_vars = params.lowfreq_vars
+    mincovf = params.mincovf
+    mincovr = params.mincovr
+    minphred = params.minphred
+    minfreq = params.minfreq
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
@@ -260,64 +263,64 @@ TBAMEND {
     should_publish = true
 
 
-    window = params.global_window
-    unambig = params.global_unambig
-    minfreq = params.global_minfreq
-    minphred = params.global_minphred
-    mincovr = params.global_mincovr
+    window = params.window
+    unambig = params.unambig
+    minfreq = params.minfreq
+    minphred = params.minphred
+    mincovr = params.mincovr
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 TBGROUPS {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbgroups"
     save_mode = 'copy'
     should_publish = true
-    project_name = params.project_name
+    project = params.project
 
-    distance = params.global_distance
+    distance = params.distance
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 TBFULL {
-    results_dir = params.outdir
+    results_dir = "${params.outdir}/tbfull"
     save_mode = 'copy'
     should_publish = true
 
-    minbqual = params.global_window
-    mincovf = params.global_window
-    mincovr = params.global_window
-    minphred = params.global_window
-    minfreq = params.global_window
-    unambig = params.global_window
-    window = params.global_window
-    distance = params.global_distance
+    minbqual = params.minbqual
+    mincovf = params.mincovf
+    mincovr = params.mincovr
+    minphred = params.minphred
+    minfreq = params.minfreq
+    unambig = params.unambig
+    window = params.window
+    distance = params.distance
 
 
-    ref = params.global_mtb_ref
-    resilist = params.global_resilist
-    intregions = params.global_intregions
-    categories = params.global_categories
-    basecalib = params.global_basecalib
+    ref = params.ref
+    resilist = params.resilist
+    intregions = params.intregions
+    categories = params.categories
+    basecalib = params.basecalib
 
 
 }
 
 RENAME_FILES {
     results_dir = "${params.outdir}/rename_files"
-    save_mode = 'copy'
+    save_mode = 'symlink'
     should_publish = true
 }
