update the dev config for k8s testign

--- a/conf/dev.config
+++ b/conf/dev.config
@@ -1,29 +1,29 @@
-profiles {
-  minikube {
+params {
+    outdir = "/work/results"
+}
 
-    params {
-            outdir = "/work/results"
-        }
+process {
 
-    process {
-            errorStrategy = { task.attempt < 3 ? 'retry' : 'ignore' }
-            executor = 'k8s'
+    errorStrategy = { task.attempt < 3 ? 'retry' : 'ignore' }
+
+    executor = 'k8s'
 
     withName:
     ".*" {
-        container = 'ubuntu:20.04'
+        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
         cpus = 1
-        memory = "2 GB"
+        memory = 2.GB
     }
+}
 
-        }
+k8s {
 
-    k8s {
-            namespace = 'nfkube'
-            serviceAccount = 'nfkubelaunchersa'
-            storageClaimName = 'nfkubevolumeclaim'
-            storageMountPath = '/work'
-        }
-    }
+    namespace = 'nfkube'
+
+    serviceAccount = 'nfkubelaunchersa'
+
+    storageClaimName = 'nfkubevolumeclaim'
+
+    storageMountPath = '/work'
 
 }
