--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -3,7 +3,7 @@ ncbi_api_key = ""
 
 genomeIds = ["ERR841438", "ERR841440"]
 
-run_type = "local" // OR "sra"
+run_type = "samplesheet" // OR "sra" OR "local"
 
 input_samplesheet = "${projectDir}/samplesheet.csv"
 
