Make mtbseq_path dynamic and sync stubs

--- a/conf/global_params.config
+++ b/conf/global_params.config
@@ -19,6 +19,8 @@ user = "root"
 
 project = "prj"
 
+// This can be customized for scenarios where the software binaries are dumped in a specific path and it isn't possible to use conda.
+mtbseq_path = "MTBseq"
 
 cohort_tsv = "${params.project}_cohort.tsv"
 
@@ -66,28 +68,33 @@ distance = 12
 // The OPTION sets the maximum number of CPUs to use within the pipeline.
 // You can use more than one core in order to execute the pipeline faster. 8 is the current maximum.
 threads = 4
-cpus = 4
 
 ref_and_indexes_path = "${projectDir}/data/references/ref/"
 
+
+
+//--------------
+//
+//TODO: Described in https://github.com/mtb-bioinformatics/mtbseq-nf/issues/53
+// --ref This OPTION sets the reference genome for the read mapping.
+// By default, the genome of Mycobacterium tuberculosis H37Rv (NC_000962.3) is set as reference.
+// User supplied FASTA files for other reference genomes should be placed in the directory /MTBseq_source/var/ref/, and the respective name given without .fasta extension.
+
 // This OPTION sets the reference genome for the read mapping.
-// The update default path is for the bioconda::mtbseq docker container.
-ref = "${params.ref_and_indexes_path}/M._tuberculosis_H37Rv_2015-11-13.fasta"
+// ref = "${params.ref_and_indexes_path}/M._tuberculosis_H37Rv_2015-11-13.fasta"
+
+//--------------
 
 // This OPTION sets a list of known variant positions associated to drug resistance for resistance prediction.
-// The update default path is for the bioconda::mtbseq docker container.
 resilist = "${projectDir}/data/references/res/MTB_Resistance_Mediating.txt"
 
 // This OPTION sets a list of interesting regions to be used for annotation of detected variants
-// The update default path is for the bioconda::mtbseq docker container.
 intregions = "${projectDir}/data/references/res/MTB_Extended_Resistance_Mediating.txt"
 
 // This OPTION specifies a gene categories file to annotate essential and non-essential genes as well as repetitive regions. SNPs in repetitive regions will be excluded for phylogenetic analysis.
-// The update default path is for the bioconda::mtbseq docker container.
 categories = "${projectDir}/data/references/cat/MTB_Gene_Categories.txt"
 
 // This OPTION specifies a file for base quality recalibration. The list must be in VCF format and should contain known SNPs.
-// The update default path is for the bioconda::mtbseq docker container.
 basecalib = "${projectDir}/data/references/res/MTB_Base_Calibration_List.vcf"
 
 
@@ -102,7 +109,7 @@ TBBWA {
 
     cpus = params.threads
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -117,7 +124,7 @@ TBREFINE {
 
     cpus = params.threads
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -133,7 +140,7 @@ TBPILE {
 
     cpus = params.threads
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -152,7 +159,7 @@ TBLIST {
 
     minbqual = params.minbqual
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -174,7 +181,7 @@ TBVARIANTS {
     minphred = params.minphred
     minfreq = params.minfreq
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -198,7 +205,7 @@ TBSTATS {
     minphred = params.minphred
     minfreq = params.minfreq
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -221,7 +228,7 @@ TBJOIN {
     minphred = params.minphred
     minfreq = params.minfreq
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -246,7 +253,7 @@ TBSTRAINS {
     minphred = params.minphred
     minfreq = params.minfreq
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -269,7 +276,7 @@ TBAMEND {
     minphred = params.minphred
     mincovr = params.mincovr
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -286,7 +293,7 @@ TBGROUPS {
 
     distance = params.distance
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
@@ -310,7 +317,7 @@ TBFULL {
     distance = params.distance
 
 
-    ref = params.ref
+    // ref = params.ref
     resilist = params.resilist
     intregions = params.intregions
     categories = params.categories
